--- a/huellaProto/huellaProto/Views/Login.xaml
+++ b/huellaProto/huellaProto/Views/Login.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage NavigationPage.HasNavigationBar="False"
+    xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="huellaProto.Views.Login"
             BindingContext="{Binding Main,Source={StaticResource Locator}}"
@@ -8,58 +9,70 @@
             
             >
     <ContentPage.Content>
-        
-        <ScrollView BindingContext="{Binding Login}">
-            <StackLayout Padding="10">
-                
-                <Image 
-                    Source="huella_icon"
-                    WidthRequest="100">
+
+        <ScrollView BindingContext="{Binding Login}" >
+            <StackLayout Padding="0,-30,0,0" >
+
+                <StackLayout VerticalOptions="CenterAndExpand">
+                <Image Source="huella_icon.png" >
+                    <Image.WidthRequest>
+                        
+                            <OnIdiom x:TypeArguments="x:Double"                     
+               Phone="150.0"                  
+               Tablet="210.0"/>
+                        </Image.WidthRequest>
+               
                 </Image>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
+
+
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" >
                     <Image
                         
                         Source="user_icon"
-                        WidthRequest="15">
-                        
+                        WidthRequest="20" Margin="0,0,0,0">
+
                     </Image>
-                
-                <Entry 
+
+                    <Entry Margin="0,0,0,0" 
                     Placeholder="E-mail"
                     Keyboard="Email"
                     Text="{Binding Email, Mode=TwoWay}"
                     WidthRequest="200">
-                </Entry>
+                    </Entry>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
                     <Image
                         
                         Source="pass_icon"
-                        WidthRequest="15">
+                        WidthRequest="20">
 
                     </Image>
-                    
-                <Entry WidthRequest="200"
+
+                    <Entry WidthRequest="200"
                     Placeholder="Password"
                     IsPassword="True"
                     Text="{Binding Password, Mode=TwoWay}">
-                </Entry>
+                    </Entry>
                 </StackLayout>
-                
+
                 <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                <Image Source="forget_icon" WidthRequest="25"></Image>
-                <Label 
+                    <Image Source="forget_icon" WidthRequest="30"></Image>
+                    <Label FontSize="20"
                     HorizontalOptions="Center"
                     Text="Olvidé mi contraseña"
                     TextColor="#05cec8"
                     VerticalOptions="CenterAndExpand">
-                </Label>
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
+                        </Label.GestureRecognizers>
+
+                    </Label>
                 </StackLayout>
                 <StackLayout
                     Orientation="Horizontal"
                     HorizontalOptions="CenterAndExpand"
                     >
-                    <Label
+                    <Label FontSize="20"
                         Text="Recordarme"
                         VerticalOptions="Center"
                         HorizontalOptions="StartAndExpand">
@@ -69,35 +82,26 @@
                     </Switch>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    
-                    <Label Text="¿No tiene cuenta?">
-                        
+
+                    <Label FontSize="15" Text="¿No tiene cuenta?">
+
                     </Label>
-                    
-                <!--<Label 
-                    HorizontalOptions="Center"
-                    Text="REGISTRESE AQUÍ"
-                    TextColor="#05cec8"
-                    VerticalOptions="CenterAndExpand"
-                    >
-                        
-                </Label>-->
-                    <Button
-                            
-                            Text="Registrar" 
-                            BackgroundColor="#61edb9"
-                            TextColor="White" 
-                            BorderRadius="23"
-                            HeightRequest="36"
-                            WidthRequest="100"                
-                            HorizontalOptions="CenterAndExpand" 
-                            Command="{Binding RegistroCommand}" 
-                            IsEnabled="{Binding Isnabled, Mode=TwoWay}">
-                    </Button>
+
+                    <Label FontSize="15"
+                        HorizontalOptions="Center"
+                        Text="REGISTRESE AQUÍ"
+                        TextColor="#05cec8"
+                        VerticalOptions="CenterAndExpand">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding RegisCommand}" />
+                        </Label.GestureRecognizers>
+                       
+                    </Label>
+
                 </StackLayout>
-                <StackLayout
+                <StackLayout Padding="0,50,0,0"
                     Orientation="Horizontal"
-                    VerticalOptions="CenterAndExpand"
+                    VerticalOptions="StartAndExpand"
                     >
                     <Button
                             
@@ -111,16 +115,17 @@
                             Command="{Binding LoginCommand}" 
                             IsEnabled="{Binding Isnabled, Mode=TwoWay}">
                     </Button>
-                    
+
+                </StackLayout>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    <Image Source="logos_sena" WidthRequest="130" ></Image>
-                    
+                    <Image Source="logos_sena" WidthRequest="200" ></Image>
+
                 </StackLayout>
                 <StackLayout>
-                <Image Margin="-11" Source="foot_icon" >
+                    <Image Margin="-11" Source="foot_icon" >
 
-                </Image>
+                    </Image>
                 </StackLayout>
 
             </StackLayout>
