--- a/huellaProto/huellaProto/Views/registroInsti.xaml
+++ b/huellaProto/huellaProto/Views/registroInsti.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage 
+    xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="huellaProto.Views.registroInsti"
              Title="Registro"
@@ -7,81 +8,79 @@
              >
 
     <ContentPage.Content>
-        <ScrollView BindingContext="{Binding Registro}">
-        <StackLayout Padding="10">
+        <ScrollView>
+            <StackLayout BindingContext="{Binding Registro}" Padding="0,30,0,0">
             <Image 
                     Source="huella_icon"
-                    WidthRequest="100">
+                    WidthRequest="150">
             </Image>
 
-            <StackLayout
-                    Orientation="Horizontal"
-                    HorizontalOptions="CenterAndExpand"
-                    WidthRequest="300">
-                <Switch ClassId="insti"
-                        HorizontalOptions="End" IsToggled="{Binding IsRemembered, Mode=TwoWay}">
-                </Switch>
-                <Label
-                        Text="Institución educativa"
-                        VerticalOptions="Center"
-                        HorizontalOptions="StartAndExpand">
-                </Label>
-                
-            </StackLayout>
-            <StackLayout
-                    Orientation="Horizontal"
-                    HorizontalOptions="CenterAndExpand"
-                    WidthRequest="300">
-                <Switch ClassId="trans"
-                        HorizontalOptions="End" >
-                </Switch>
-                <Label
-                        Text="Empresa de transporte"
-                        VerticalOptions="Center"
-                        HorizontalOptions="StartAndExpand">
-                </Label>
-                
-            </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                
+            
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="0,40,0,0" >
+                    <Image
+                        
+                        Source="institucion_icon"
+                        WidthRequest="30">
 
-                <Entry WidthRequest="200"
-                    Placeholder="Nombre"
+                    </Image>
+
+                    <Entry WidthRequest="200"
+                    Placeholder="Institución"
                     
                     Text="{Binding Nombre, Mode=TwoWay}">
                 </Entry>
             </StackLayout>
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                
+                    <Image
+                        
+                        Source="letter"
+                        WidthRequest="30">
 
-                <Entry WidthRequest="200"
+                    </Image>
+
+                    <Entry WidthRequest="200"
                     Placeholder="E-mail"
-                   
+                    Keyboard="Email"
                     Text="{Binding Email, Mode=TwoWay}">
                 </Entry>
             </StackLayout>
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-               
+                    <Image
+                        
+                        Source="pass_icon"
+                        WidthRequest="20">
 
-                <Entry WidthRequest="200"
+                    </Image>
+
+                    <Entry WidthRequest="200"
                     Placeholder="Password"
                     IsPassword="True"
                     Text="{Binding Password, Mode=TwoWay}">
                 </Entry>
             </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center"  >
+                    <Image
+                        Margin="-15,0,-10,0"
+                        Source="nit"
+                        WidthRequest="50">
 
-                <Entry WidthRequest="200"
+                    </Image>
+
+                    <Entry WidthRequest="200"
                     Placeholder="NIT"
                    
                     Text="{Binding Nit, Mode=TwoWay}">
                 </Entry>
             </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,0,0,10" >
+                    <Image
+                        Margin="-5,0,-5,0"
+                        Source="sign"
+                        WidthRequest="30">
 
-                <Entry WidthRequest="200"
+                    </Image>
+
+                    <Entry WidthRequest="200"
                     Placeholder="Dirección"
                     
                     Text="{Binding Direc, Mode=TwoWay}">
@@ -97,20 +96,16 @@
                             BackgroundColor="#61edb9"
                             TextColor="White" 
                             BorderRadius="23"
-                            HeightRequest="36"
-                            WidthRequest="100"                
+                            HeightRequest="46"
+                            WidthRequest="200"                
                             HorizontalOptions="CenterAndExpand" 
                             Command="{Binding RegisCommand}" 
                             IsEnabled="{Binding Isnabled, Mode=TwoWay}">
                     </Button>
 
                 </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                <Image Source="logos_sena" WidthRequest="130" ></Image>
-
-            </StackLayout>
-            <StackLayout>
-                <Image Margin="-11" Source="foot_icon" >
+            <StackLayout Margin="0,20,0,0">
+                    <Image Margin="-11" Source="fondos_arboles2_icon.png" >
 
                 </Image>
             </StackLayout>
