--- a/huellaProto/huellaProto/Views/registroInsti.xaml
+++ b/huellaProto/huellaProto/Views/registroInsti.xaml
@@ -10,107 +10,135 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout BindingContext="{Binding Registro}" Padding="0,30,0,0">
-            <Image 
-                    Source="huella_icon"
-                    WidthRequest="150">
-            </Image>
-
-            
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="0,40,0,0" >
-                    <Image
-                        
-                        Source="institucion_icon"
-                        WidthRequest="30">
-
+                    <Image 
+                        Source="huella_icon"
+                        WidthRequest="150">
                     </Image>
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center" Margin="0,40,0,0" IsVisible="{Binding IsVisibleIcon}">
+                        <StackLayout>
+                            <Image
+                                Source="university"
+                                WidthRequest="90">
+                                <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding InstitucionCommand}" />
+                                </Image.GestureRecognizers>
+                            </Image>
+                            <Label FontSize="15"
+                                HorizontalOptions="Center"
+                                Text="Institución Educativa"
+                                TextColor="#05cec8"
+                                VerticalOptions="CenterAndExpand">
+                                <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding InstitucionCommand}" />
+                                </Label.GestureRecognizers>
+                            </Label>
+                        </StackLayout>
+                    <StackLayout Margin="0,35,0,0">
+                            <Image
+                                Source="truck"
+                                WidthRequest="90">
+                                <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding EmpresaCommand}" />
+                                </Image.GestureRecognizers>
+                            </Image>
+                            <Label FontSize="15"
+                                 HorizontalOptions="Center"
+                                 Text="Empresa de Transporte"
+                                 TextColor="#05cec8"
+                                 VerticalOptions="CenterAndExpand">
+                                <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding EmpresaCommand}" />
+                                </Label.GestureRecognizers>
+                            </Label>
+                    </StackLayout>
+                    </StackLayout>
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center" IsVisible="{Binding IsVisible, Mode=TwoWay}">
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="0,40,0,0"  IsVisible="{Binding IsVisibleIns, Mode=TwoWay}">
+                        <Image
+                            Source="institucion_icon"
+                            WidthRequest="30">
+                        </Image>
+                        <Entry WidthRequest="200"
+                            Placeholder="Institución"
+                            Text="{Binding Nombre, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="0,40,0,0"  IsVisible="{Binding IsVisibleEmp, Mode=TwoWay}">
+                        <Image
+                            Source="truck"
+                            WidthRequest="30">
+                        </Image>
+                        <Entry WidthRequest="200"
+                            Placeholder="Empresa"
+                            Text="{Binding Nombre, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
+                        <Image
+                            Source="letter"
+                            WidthRequest="30">
+                        </Image>
+                        <Entry WidthRequest="200"
+                            Placeholder="E-mail"
+                            Keyboard="Email"
+                            Text="{Binding Email, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
+                        <Image
+                                Source="pass_icon"
+                                WidthRequest="20">
+                        </Image>
 
-                    <Entry WidthRequest="200"
-                    Placeholder="Institución"
-                    
-                    Text="{Binding Nombre, Mode=TwoWay}">
-                </Entry>
-            </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                    <Image
-                        
-                        Source="letter"
-                        WidthRequest="30">
+                        <Entry WidthRequest="200"
+                                Placeholder="Password"
+                                IsPassword="True"
+                                Text="{Binding Password, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center"  >
+                        <Image
+                                Margin="-15,0,-10,0"
+                                Source="nit"
+                                WidthRequest="50">
+                        </Image>
+                        <Entry WidthRequest="200"
+                                Placeholder="NIT"
+                                Text="{Binding Nit, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,0,0,10" >
+                        <Image
+                                Margin="-5,0,-5,0"
+                                Source="sign"
+                                WidthRequest="30">
+                        </Image>
+                        <Entry WidthRequest="200"
+                                Placeholder="Dirección"
+                                Text="{Binding Direc, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                        <Button
+                                Text="Registrar" 
+                                BackgroundColor="#61edb9"
+                                TextColor="White" 
+                                BorderRadius="23"
+                                HeightRequest="46"
+                                WidthRequest="200"                
+                                HorizontalOptions="CenterAndExpand" 
+                                Command="{Binding RegisCommand}" 
+                                IsEnabled="{Binding Isnabled, Mode=TwoWay}">
+                        </Button>
 
-                    </Image>
-
-                    <Entry WidthRequest="200"
-                    Placeholder="E-mail"
-                    Keyboard="Email"
-                    Text="{Binding Email, Mode=TwoWay}">
-                </Entry>
-            </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                    <Image
-                        
-                        Source="pass_icon"
-                        WidthRequest="20">
-
-                    </Image>
-
-                    <Entry WidthRequest="200"
-                    Placeholder="Password"
-                    IsPassword="True"
-                    Text="{Binding Password, Mode=TwoWay}">
-                </Entry>
-            </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center"  >
-                    <Image
-                        Margin="-15,0,-10,0"
-                        Source="nit"
-                        WidthRequest="50">
-
-                    </Image>
-
-                    <Entry WidthRequest="200"
-                    Placeholder="NIT"
-                   
-                    Text="{Binding Nit, Mode=TwoWay}">
-                </Entry>
-            </StackLayout>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,0,0,10" >
-                    <Image
-                        Margin="-5,0,-5,0"
-                        Source="sign"
-                        WidthRequest="30">
-
-                    </Image>
-
-                    <Entry WidthRequest="200"
-                    Placeholder="Dirección"
-                    
-                    Text="{Binding Direc, Mode=TwoWay}">
-                </Entry>
-            </StackLayout>
-            <StackLayout
-                    Orientation="Horizontal"
-                    VerticalOptions="CenterAndExpand"
-                    >
-                    <Button
-                            
-                            Text="Registrar" 
-                            BackgroundColor="#61edb9"
-                            TextColor="White" 
-                            BorderRadius="23"
-                            HeightRequest="46"
-                            WidthRequest="200"                
-                            HorizontalOptions="CenterAndExpand" 
-                            Command="{Binding RegisCommand}" 
-                            IsEnabled="{Binding Isnabled, Mode=TwoWay}">
-                    </Button>
-
+                    </StackLayout>
                 </StackLayout>
-            <StackLayout Margin="0,20,0,0">
-                    <Image Margin="-11" Source="fondos_arboles2_icon.png" >
+             
+                <StackLayout Margin="0,40,0,0">
+                    <Image Margin="-11" Source="fondos_arboles2_icon.png" ></Image>
+                </StackLayout>
 
-                </Image>
             </StackLayout>
-
-        </StackLayout>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
