--- a/huellaProto/huellaProto/Views/Login.xaml
+++ b/huellaProto/huellaProto/Views/Login.xaml
@@ -10,121 +10,100 @@
 
         <ScrollView BindingContext="{Binding Login}" >
             <StackLayout Padding="0,10,0,0" >
-
                 <StackLayout VerticalOptions="CenterAndExpand">
-                <Image Source="huella_icon.png" >
-                    <Image.WidthRequest>
-                        
-                            <OnIdiom x:TypeArguments="x:Double"                     
-               Phone="150.0"                  
-               Tablet="210.0"/>
+                    <Image Source="huella_icon.png" >
+                        <Image.WidthRequest>
+                           <OnIdiom x:TypeArguments="x:Double"                     
+                               Phone="150.0"                  
+                               Tablet="210.0"/>
                         </Image.WidthRequest>
-               
-                </Image>
-
-
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" >
-                    <Image
-                        
-                        Source="user_icon"
-                        WidthRequest="20">
-
                     </Image>
-
-                    <Entry
-                    Placeholder="E-mail"
-                    Keyboard="Email"
-                    Text="{Binding Email, Mode=TwoWay}"
-                    WidthRequest="200">
-                    </Entry>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
-                    <Image
-                        
-                        Source="pass_icon"
-                        WidthRequest="20">
-
-                    </Image>
-
-                    <Entry WidthRequest="200"
-                    Placeholder="Password"
-                    IsPassword="True"
-                    Text="{Binding Password, Mode=TwoWay}">
-                    </Entry>
-                </StackLayout>
-
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    <Image Source="forget_icon" WidthRequest="30"></Image>
-                    <Label FontSize="20"
-                    HorizontalOptions="Center"
-                    Text="Olvidé mi contraseña"
-                    TextColor="#05cec8"
-                    VerticalOptions="CenterAndExpand">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
-                        </Label.GestureRecognizers>
-
-                    </Label>
-                </StackLayout>
-                <StackLayout
-                    Orientation="Horizontal"
-                    HorizontalOptions="CenterAndExpand"
-                    >
-                    <Label FontSize="20"
-                        Text="Recordarme"
-                        VerticalOptions="Center"
-                        HorizontalOptions="StartAndExpand">
-                    </Label>
-                    <Switch 
-                        HorizontalOptions="End" IsToggled="{Binding IsRemembered, Mode=TwoWay}">
-                    </Switch>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-
-                    <Label FontSize="15" Text="¿No tiene cuenta?">
-
-                    </Label>
-
-                    <Label FontSize="15"
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" >
+                        <Image
+                            Source="user_icon"
+                            WidthRequest="20">
+                        </Image>
+                        <Entry
+                            Placeholder="E-mail"
+                            Keyboard="Email"
+                            Text="{Binding Email, Mode=TwoWay}"
+                            WidthRequest="200">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
+                        <Image
+                            Source="pass_icon"
+                            WidthRequest="20">
+                        </Image>
+                        <Entry WidthRequest="200"
+                            Placeholder="Password"
+                            IsPassword="True"
+                            Text="{Binding Password, Mode=TwoWay}">
+                        </Entry>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Image Source="forget_icon" WidthRequest="30"></Image>
+                        <Label FontSize="20"
                         HorizontalOptions="Center"
-                        Text="REGISTRESE AQUÍ"
+                        Text="Olvidé mi contraseña"
                         TextColor="#05cec8"
                         VerticalOptions="CenterAndExpand">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding RegisCommand}" />
-                        </Label.GestureRecognizers>
-                       
-                    </Label>
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Label FontSize="20"
+                            Text="Recordarme"
+                            VerticalOptions="Center"
+                            HorizontalOptions="StartAndExpand">
+                        </Label>
+                        <Switch 
+                            HorizontalOptions="End" IsToggled="{Binding IsRemembered, Mode=TwoWay}">
+                        </Switch>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                            <Label FontSize="15" Text="¿No tiene cuenta?"/>
+                            <Label FontSize="15"
+                                HorizontalOptions="Center"
+                                Text="REGISTRESE AQUÍ"
+                                TextColor="#05cec8"
+                                VerticalOptions="CenterAndExpand">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding RegisCommand}" />
+                            </Label.GestureRecognizers>
+                        </Label>
 
-                </StackLayout>
-                <StackLayout Padding="0,50,0,0"
-                    Orientation="Horizontal"
-                    VerticalOptions="StartAndExpand"
-                    >
-                    <Button
+                    </StackLayout>
+                    <StackLayout 
+                        Padding="0,50,0,0"
+                        Orientation="Horizontal"
+                        VerticalOptions="StartAndExpand"
+                        >
+                            <Button
                             
-                            Text="Login" 
-                            BackgroundColor="#61edb9"
-                            TextColor="White" 
-                            BorderRadius="23"
-                            HeightRequest="46"
-                            WidthRequest="200"                
-                            HorizontalOptions="CenterAndExpand" 
-                            Command="{Binding LoginCommand}" 
-                            IsEnabled="{Binding Isnabled, Mode=TwoWay}">
-                    </Button>
+                                    Text="Login" 
+                                    BackgroundColor="#61edb9"
+                                    TextColor="White" 
+                                    BorderRadius="23"
+                                    HeightRequest="46"
+                                    WidthRequest="200"                
+                                    HorizontalOptions="CenterAndExpand" 
+                                    Command="{Binding LoginCommand}" 
+                                    IsEnabled="{Binding Isnabled, Mode=TwoWay}">
+                            </Button>
+                    </StackLayout>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                        <Image Source="logos_sena" WidthRequest="200" ></Image>
 
-                </StackLayout>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    <Image Source="logos_sena" WidthRequest="200" ></Image>
+                    </StackLayout>
+                    <StackLayout>
+                        <Image Margin="-11" Source="foot_icon" >
 
-                </StackLayout>
-                <StackLayout>
-                    <Image Margin="-11" Source="foot_icon" >
-
-                    </Image>
-                </StackLayout>
+                        </Image>
+                    </StackLayout>
 
             </StackLayout>
         </ScrollView>
