--- a/huellaProto/huellaProto/Views/ListFlota.xaml
+++ b/huellaProto/huellaProto/Views/ListFlota.xaml
@@ -5,9 +5,11 @@
              BindingContext="{Binding Main,Source={StaticResource Locator}}"
              Title="Configuraciones">
     <ContentPage.Content>
-        <StackLayout >
-            <ListView 
-                BackgroundColor="Silver"
+        <StackLayout BindingContext="{Binding FlotaC}">
+            <Label
+                Text="Total vehiculos 1000" FontAttributes="Bold" FontSize="Large" HorizontalTextAlignment="Center" Margin="0,15,0,0"></Label>
+            <!--<ListView 
+                
                 HasUnevenRows="true" 
                 IsPullToRefreshEnabled="true"
               
@@ -19,22 +21,23 @@
                             <Frame
                                 CornerRadius="20"
                                 HasShadow="true"
-                                Margin="5">
-                                <!--<Frame.GestureRecognizers>
+                                Margin="5"
+                                BackgroundColor="#CEF6F5">
+                                --><!--<Frame.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding SelectLandCommand}"/>
-                                </Frame.GestureRecognizers>-->
+                                </Frame.GestureRecognizers>--><!--
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="auto"/>
-                                        <!--<ColumnDefinition Width="Auto"/>-->
+                                        --><!--<ColumnDefinition Width="Auto"/>--><!--
                                     </Grid.ColumnDefinitions>
-                                    <!--<ffimageloading:CachedImage 
+                                    --><!--<ffimageloading:CachedImage 
                                         Grid.Column="0"
                                         HeightRequest="30"
                                         Source="{Binding Flag, Converter={StaticResource SvgImageSourceConverter}}"
                                         WidthRequest="60">
-                                    </ffimageloading:CachedImage>-->
+                                    </ffimageloading:CachedImage>--><!--
                                     <StackLayout 
                                         Grid.Column="0"
                                         VerticalOptions="Center">
@@ -42,20 +45,50 @@
                                             FontAttributes="Bold"
                                             FontSize="Medium" 
                                             Text="{Binding Motor}"
-                                            TextColor="Black">
+                                            TextColor="White">
                                         </Label>
                                         <Label 
                                             Text="{Binding Combustible}"
                                             TextColor="Black">
                                         </Label>
                                     </StackLayout>
-                                    <!--<Image 
+                                    --><!--<Image 
                                         Grid.Column="1"
                                         HorizontalOptions="End" 
                                         Source="ic_chevron_right">
-                                    </Image>-->
+                                    </Image>--><!--
                                 </Grid>
                             </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>-->
+            <ListView x:Name="MenuItemsListView"
+                        SeparatorVisibility="None"
+                        HasUnevenRows="true"
+                        ItemsSource="{Binding Prueba}"
+                        VerticalOptions="Start"
+                        Margin="0,15,0,0">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Padding="15,10" HorizontalOptions="FillAndExpand"
+                                            Orientation="Horizontal">
+                                <Image Source="truck"></Image>
+                                <Label VerticalOptions="FillAndExpand"
+                                    VerticalTextAlignment="Center"
+                                    Text="{Binding Motor}"
+                                    FontSize="24">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding NavegarCommand}"/>
+                                    </Label.GestureRecognizers>
+                                </Label>
+                                <Image 
+                                    Grid.Column="1"
+                                    HorizontalOptions="EndAndExpand" 
+                                    Source="ic_chevron_right">
+                                </Image>
+                            </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
